<resources>
    <string name="prospekt_akapit1">
        Prospekt informacyjny musi być przygotowany przez dewelopera według ustawowego wzoru.
        \n\nDeweloper musi obowiązkowo Ci go udostępnić do zapoznania, jeśli  jesteś zainteresowany daną inwestycją, która dopiero jest w fazie budowania.
        \nSprawdzając ten dokument, przede wszystkim zwróć uwagę na:</string>
    <string name="TITLE_przed_zakupem_1">Lokalizacja</string>
    <string name="TITLE_przed_zakupem_2">Co w okolicy</string>
    <string name="TITLE_przed_zakupem_3">Strony świata</string>
    <string name="TITLE_przed_zakupem_4">Co mówią sąsiedzi</string>
    <string name="TITLE_przed_zakupem_5">Czynsz i opłaty</string>
    <string name="TITLE_przed_zakupem_7">Źródło ciepła</string>
    <string name="TITLE_przed_zakupem_8">Ogólny stan budynku</string>
    <string name="TITLE_przed_zakupem_9">Stan wyposażenia</string>
    <string name="TITLE_przed_zakupem_10">Co zostaje w M</string>
    <string name="prospekt_akapit2">Zakup od firmy, która nie ma za sobą żadnego lub tylko jedno małe przedsięwzięcie, to duże ryzyko.
        \n\n<b>Bank może nie chcieć w ogóle udzielić Ci kredytu na zakup takiego M.</b>
        \n\nNie da się też sprawdzić dotychczasowej jakości i terminowości dewelopera oraz jego podejścia do reklamacji itp.</string>
    <string name="prospekt_akapit3">M z kiepskim widokiem, w cieniu wysokiego budynku albo obok głośnej ulicy, to w przyszłości problem ze sprzedażą lub wynajmem.
        \n\nWarto zapoznać się z <b>Miejscowym Planem Zagospodarowania Przestrzennego</b>, aby dowiedzieć się, co jeszcze może powstać w przyszłości w okolicy.</string>
    <string name="prospekt_akapit4">Warto samemu rozszerzyć poszukiwania informacji na ten temat najlepiej wśród osób, które już zamieszkują tę okolicę.
        \n\n<b>Z prospektu bowiem nie dowiesz się</b> np. o planowanej budowie spalarni śmieci w promieniu 1,1 km tuż przy Twojej przyszłej drodze do pracy.
        \n\nAlbo o niedawno wybudowanym wysypisku śmieci 900 m za lasem, które dopiero czeka na zapełnienie.</string>
    <string name="prospekt_akapit5">Deweloper może powołać się na polskie normy.
        \nDo wyboru praktycznie są dwie:
    \n\n<b> - starsza PN -70/B-02365:</b>
    \ndo powierzchni wlicza się grubość tynków, powierzchnie z sufitem powyżej 2,2m w 100\%%.
        \n\nZe skośnym sufitem od 1,4m do 2,2m w 50\%% a poniżej 1,4m nie wlicza się.
    \n\n<b> - nowsza PN-ISO 9836:1997:</b>
    \ndo powierzchni wlicza się grubość ścianek działowych.
        \n\nPowierzchnie ze skośnym sufitem tylko od 1,9m.
        \n\nNie wlicza się grubości tynków (czyli mierzymy ścianę wykończoną bez listew przypodłogowych.

    \n\n<b>W obu normach nie wlicza się otworów drzwiowych.</b>
        \n\n<i>W praktyce nie wlicza się również powierzchni balkonów, tarasów itp. (teoretycznie, bo M z dużymi tarasami są zwykle sporo droższe).</i></string>
    <string name="prospekt_akapit6">Nie bój się, jeśli w znacznej części deweloper posiłkuje się kredytem.
       \n\n<b>Jest to dla Ciebie dobra wiadomość!</b>
        \n\nBank udzielający mu kredytu uznał go za partnera godnego zaufania i z pewnością sprawdził go wcześniej bardzo dokładnie.
        \n\n<b>Ale UWAGA:</b>
        \n\n<i>w takim przypadku <u>bezwzględnie</u> musisz zadbać, abyś otrzymał dokument wydany przez kredytujący bank, w którym  bank ten zezwoli na <b>bezobciążeniowe wyodrębnienie</b> Twojego M z Księgi Wieczystej inwestycji.</i>
        <b>Inaczej kupisz M z milionowym kredytem do spłaty!</b></string>
    <string name="prospekt_akapit7">Najkorzystniejszy dla Ciebie jest <b>rachunek powierniczy zamknięty.</b>
        \n\nDeweloper dostanie z niego pieniądze dopiero, kiedy zostaniesz właścicielem M.
        \n\nNatomiast z <b>rachunku powierniczego otwartego</b> deweloper może wybierać pieniądze w miarę postępu prac, kontrolowanych przez bank.
        \n\nDlatego, jeśli deweloper <u>splajtuje</u> w połowie inwestycji, pieniądze, które wcześniej wpłaciłeś są praktycznie stracone.
        \n\nBy Cię przed tym uchronić, deweloper może wykupić nieobowiązkową gwarancję, z której możesz otrzymać w takim przypadku pieniądze, tak jak z ubezpieczenia.
        \n\nJednak są różne gwarancje, dlatego jeśli deweloper nie ma nic do ukrycia, powinien zechcieć Ci ją udostępnić do zapoznania i skonsultowania z prawnikiem.</string>
    <string name="prospekt_akapit8">Powinno Cię zaniepokoić, jeśli deweloper w pierwszych transzach wymaga stosunkowo dużych wpłat.
       \n\n<u>Transze powinny być w miarę równe i faktycznie odpowiadać ponoszonym kosztom.</u>
        \n\nUstawa wymaga przynajmniej 4 etapy, ale nic nie stoi na przeszkodzie, aby deweloper rozpisał budowę na więcej kroków.
        \n\nBezpieczniej i taniej dla Ciebie jest wypłacać deweloperowi częściej ale mniejsze kwoty, szczególnie na początku.</string>
    <string name="prospekt_akapit9">Deweloper może zastrzec, że cena M może wzrosnąć (np. przez podwyżkę cen materiałów lub wzrostu stawki VAT).
        \n\nJednak w takim przypadku zawsze musisz mieć zagwarantowane prawo bezkarnie rozwiązać taką umowę i żądać zwrotu całości wpłaconych pieniędzy.
        \n\n<b>Bez płacenia żadnych kar.</b></string>
    <string name="prospekt_akapit10">Zwróć baczną uwagę na sytuacje, w których deweloper daje sobie samemu prawo do rozwiązania umowy i jakie <b>kary</b> wobec Ciebie przewiduje.
        \n\nRównocześnie sprawdź, czy Ty masz takie same prawa, <u>czy może jednak mniejsze.</u>
        \n\nNp. jeśli deweloper z jakichś powodów się spóźni z oddaniem M, masz ustawowe prawo <b>odstąpić</b> od takiej umowy i żądać zwrotu pieniędzy, <u>ale wcześniej musisz dać jeszcze deweloperowi 120 dni na wyrobienie się w czasie.</u>
        \n\nNatomiast <u>jeśli Ty spóźnisz się z zapłatą raty choćby jeden dzień</u>, deweloper może dać sobie prawo żądać zapłaty przez Ciebie wysokich kar umownych.</string>
    <string name="deweloperska_wstep">Umowa ta musi zostać podpisana u notariusza.
        Podobnie każda zmiana tej umowy (aneksy).
        \n\nJej koszt pokrywasz po <u>połowie z&#160;deweloperem.</u>
        Możesz wskazać swojego notariusza, jeśli zrobi to taniej.</string>
    <string name="deweloperska_akapit1">Masz prawo poprosić dewelopera, aby z&#160;wyprzedzeniem przesłał Ci <b>wzór umowy.</b>
        \n\nDzięki temu będziesz mógł na spokojnie ją przeanalizować z&#160;prawnikiem i&#160;zaproponować swoje poprawki.
        \n\nWprawdzie postanowienia umowy <u>nieuzgodnione indywidualnie z&#160;Tobą,</u> tylko odgórnie narzucone przez dewelopera, <b>nie są wiążące,</b> <u>jeżeli są sprzeczne z&#160;dobrymi obyczajami i&#160;rażąco naruszają Twoje interesy.</u>
        \n\nJednak \"odkręcenie\" takiej umowy wiąże się z&#160;procesem sądowym, więc lepiej wcześniej skonsultować ją z prawnikiem.
        \n\nUmowa deweloperska <u>musi być zgodna</u> ze&#160;wszystkimi informacjami, jakie przeczytałeś w prospekcie informacyjnym.
    </string>
    <string name="deweloperska_akapit2">Powinieneś już wiedzieć jakie dokładnie koszty związane z&#160;utrzymaniem M będziesz ponosić, kiedy zostaniesz jego właścicielem.</string>
    <string name="deweloperska_akapit3">Jeśli deweloper posiłkuje się kredytem, w&#160;dziale IV Księgi Wieczystej z&#160;pewnością jest wpisana hipoteka.
            \n\nDlatego w&#160;umowie musi znaleźć się zapis, że dany bank <u>nie przepisze tej hipoteki na Twoje M.</u>
            \n\nOprócz wpisanych już w KW hipotek, w&#160;miarę upływu czasu, <u>mogą pojawić się nowe,</u> np. hipoteki przymusowe albo same <b>wzmianki</b> o&#160;wpisach.
            \n\n<b>UWAGA!</b> Taka wzmianka to informacja, że <u>za chwilę może być wpisana kolejna hipoteka!</u>
            \n\nCo ciekawe, <i>Sąd Najwyższy wyrokiem z&#160;19 maja 2016&#160;r., sygn.&#160;akt&#160;IV&#160;CSK&#160;535/15</i> stwierdził, że <b>wzmianka nie jest obciążeniem!</b>
            \n\nTo znaczy, ze <u>nie wystarczy</u> zapis mówiący o sprzedaży nieobciążonego M.
            \n\nMusi się znaleźć także zapis aby na dzień podpisania umowy końcowej, nie było <b>żadnych wzmianek w&#160;KW!</b>
            \n\nInaczej możesz kupić M <b>obciążone milionowym kredytem!</b></string>
    <string name="deweloperska_akapit4">Jest to termin, do którego deweloper zobowiązuje się <u>sprzedać Ci finalnie M.</u>
            \n\nCzyli <u>przenieść na Ciebie jego własność.</u>
            \n\nMusi to być <b>konkretna data.</b>
            \n\nNie gódź się na termin zależny od czegokolwiek.
            \n\nNp. termin do 2 miesięcy po odebraniu pozwolenia na użytkowanie jest niebezpieczny, bo w&#160;praktyce deweloper <u>może ten dzień przeciągać w&#160;nieskończoność.</u>
            \n\nDodatkowo możesz wynegocjować zapis, mówiący o <b>karze finansowej za każdy dzień zwłoki</b> dewelopera.</string>
    <string name="deweloperska_akapit5"><b>Art.&#160;25 u.o.p.n.&#160;</b>niby jasno, ale jednak mało konkretnie stwierdza tylko, że <i>wysokość odsetek zastrzeżonych na rzecz dewelopera, nie może przewyższać kar umownych zastrzeżonych na rzecz nabywcy.</i>
            \n\nZatem nic nie stoi na przeszkodzie, aby kary nakładane na dewelopera za każdy dzień zwłoki były wyższe, niż ewentualne odsetki jakie będziesz Ty musiał zapłacić, za ewentualną zwłokę w&#160;zapłacie.
            \n\nJednak zwróć uwagę, ża ustawa mówi o <b>odsetkach</b> a nie <b>karach</b> finansowych.
        </string>
    <string name="deweloperska_akapit6">Nie wystarczy napisać <i>stan deweloperski</i>, czy <i>pod klucz.</i>
            \n\nTe pojęcia <u>nigdzie nie są sprecyzowane</u> i&#160;mogą oznaczać dla każdego coś innego.
            \n\nZwróć uwagę, aby standard wykończenia był bardzo precyzyjnie i&#160;obszernie opisany.
            \n\nJeśli nie dopilnujesz tego punktu, <b>nie będziesz mógł reklamować</b> np. braku kaloryferów, parapetów czy nawet wylewki podłogowej i&#160;innych!</string>
    <string name="deweloperska_akapit7">Może się niestety tak zdarzyć, że pomimo usilnych prób, <b>żaden bank nie będzie chciał udzielić Ci kredytu.</b>
        \n\nWażne, aby umowa taki scenariusz przewidywała i&#160;pozwalała Ci się w takim wypadku <i>wycofać z umowy bez żadnych kar.</i></string>
    <string name="deweloperska_akapit8">Zwykle przy podpisaniu umowy deweloperskiej, deweloper życzy sobie przelania na jego konto pewnej sumy pieniędzy, tytułem <b>zadatku</b> lub <b>zaliczki.</b>
        \n\nPowinno Ci zależeć, aby była to <u>jak najmniejsza kwota.</u>
        \n\nJeśli <b>z Twojej winy</b> nie dojdzie do podpisania umowy końcowej, <b>zadatek</b> przepadnie, a <b>zaliczkę</b> deweloper będzie musiał Ci zwrócić.</string>
    <string name="deweloperska_akapit9">Deweloper nie może nakładać na Ciebie żadnych dodatkowych, nieuzasadnionych obowiązków, np.:
        \n\n- zawarcia umowy ubezpieczenia wskazanego przez dewelopera
        \n\n- konieczności wykończenia lokalu w &#160;jakimś terminie
        \n\n- partycypowania w&#160;kosztach utrzymania nieruchomości należących do dewelopera,
        \n\n- składania dodatkowych oświadczeń
        \n\n- ponoszenia kosztów aneksów
        \n\n- ponoszenia kosztów eksploatacyjnych pomimo nieodebrania M lub garażu</string>
    <string name="deweloperska_akapit10">Jeśli mimo wszystko podpisałeś umowę deweloperską, która jest <u>mniej korzystna</u>, niż wskazują na to przepisy prawa, to <u>takie postanowienia są nieważne</u> i&#160;w&#160;ich miejsce stosuje się odpowiednie zapisy ustawy.
        \n\nJednak pamiętaj, że <i>jest dobrze, jak jest dobrze.</i>
        \n\nAle kiedy <b>sprawy zaczną się komplikować</b> i&#160;nie pójdą po naszej myśli, wszystko sprowadzi się do tego, co jest <b>zapisane czarno na białym na umowie</b>.
        \n\nDlatego przyłóż <b>olbrzymią wagę</b> do każdego zdania zapisanego w umowie, a najlepiej przed podpisaniem <b>skonsultuj ją z&#160;prawnikiem,</b> aby byc zabezpieczonym na każdą ewentualność.</string>
</resources>